<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SplashActivity!</string>
    <string name="app_name">Event Locations</string>
    <string name="lb_search_by_county">Search by County</string>
    <string name="lb_search_by_site_name">Search by Site Name</string>
    <string name="lb_search_services">Search Services</string>
    <string name="lb_search_caterers">Search Caterers</string>
    <string name="lb_find_bridal_show">Find A Bridal Show</string>
    <!--  string name="lb_honeymoon">Honeymoon & Wedding</string>-->
    <string name="button_email">Email</string>
    <string name="button_call_old">Call</string>
    <string name="button_call">+ Contacts</string>
    <string name="button_map">Map</string>
    <string name="title_aboutus">About Us</string>
    <string name="title_aboutus_events_locations">About Event Locations</string>
    <string name="title_aboutus_aditional_information">Additional Information</string>
    <string name="title_aboutus_contact_us">Contact Us</string>
    <!--  string name="title_version_1">Version: 1.0.0</string>-->
    <string name="title_version_1">Version: 0.02.10</string>
    <string name="title_about_body1">Established in 1993, EVENT LOCATIONS (previously called Locations) is the #1 source for finding a venue for Weddings, Social Occasions and Corporate Events in the NY / NJ metro area. In Feb. 2011 we developed an Android Tablets which you can download for free form androidmarket.com.</string>
    <string name="title_about_body2"></string>
    <string name="send_button">Send</string>
    <string name="hint_username">Your Name</string>
    <string name="hint_lastname">Your Last Name</string>
    <string name="hint_email">Your Email Address ex:johndoe@gmail.com</string>
    <string name="hint_address1">Address 1</string>
    <string name="hint_address2">Address 2</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">Zip</string>
    <string name="hint_ofpeople"># of people</string>
    <string name="hint_price_person">Price / Person</string>
    <string name="label_getdirections">Get Directions</string>
    <string name="hint_search">Search</string>
    
    <string name="hint_subject">Subject</string>
    <string name="hint_message">Message</string>
    <string name="lb_ok">OK</string>
    <string name="lb_error_title">Required</string>
    <string name="form_errors">Form Errors</string>
    <string name="locationMagazine">Locations Magazine</string>
    <string name="locationMagazine_body">Your email has been sent.</string>
    <string name="honeymoon_option">Enter to Win a Honeymoon</string>
    <string name="honeymoon_title">Win a Honeymoon</string>
    <string name="win_a_honeymoon_subitile">Win an 8 day/7 night ALL INCLUSIVE honeymoon to Jamaica. Hotel, Food &amp; liquor included.</string>
    <string name="win_a_honeymoon_subitile2">Value is $3,000 - $4,000 depending on date. Airfare  &amp; transfers not included. No purchase required. Please click the button below to View Rules &amp; Regulations</string>
    <string name="next">Next</string>
    <string name="rules_regulations">Rules &amp; Regulations</string>
    <string name="title_win_rules_regulations">"Win a Honeymoon" - Rules &amp; Regulations</string>
    <string name="subtitle_rules">Rules</string>
    <string name="rules_1">No purchase required.</string>
    <string name="rules_2">The "Win a Honeymoon" prize is accommodations for 8 days and 7 nights at Breezes Negril Resort. For two people in one room. Includes meals, beverages, premium liquor, hotel and hotel taxes. Accommodations are based on availability and maybe subject to restrictions, blackout dates and limitations. Approximate retail value of the prize is $3,000 - $4,000 depending upon date chosen. Honeymoon package is subject to availability.</string>
    <string name="rules_3">Google is not sponsor or involved in this "Win a Honeymoon" sweepstakes in any manner</string>
    <string name="rules_4">Airfare and hotel transfers are not included. Optional services such as massage and off-resort excursions are not included.</string>
    <string name="rules_5">To enter, visit our website at </string>
    <string name="rules_52"><u>http://www.EventLocations.us/win/</u></string>
    <string name="rules_53">or send your name, address, phone and wedding date on a 3” x 5” card to:? Event Locations,</string>
    <string name="rules_55"><u>124 East 79th St., NY NY 10075</u></string>
    <string name="rules_53_portrait">or send your name, address, phone and wedding date </string>
    <string name="rules_54_portrait">on a 3” x 5” card to:? Event Locations,</string>
    <string name="rules_6">All entries must be received by December 31st. Event Locations and Event Locations are not responsible for late or lost entries. The decision of the judges is final. Duplicate, mutilated, illegible or incomplete entries will be disqualified. One entry per person.</string>
    <string name="rules_7">Eligibility; This drawing is open to legal residents of the US, 18 years or older. Employees of Breezes and their immediate families are not eligible to win. Immediate families include spouse, parents and children.</string>
    <string name="rules_8">The winner will be selected in a drawing held on January 15th. Odds of winning are dependent upon the number of complete entries received.</string>
    <string name="rules_9">The winner will be notified. The prize must be claimed within four weeks of notification. If the prize isn’t claimed, it will be awarded in a second drawing among the entries received.</string>
    <string name="rules_10">The prize is not redeemable for any monetary value, nor transferable to any other person.</string>
    <string name="rules_11">All Federal, State and City taxes are the responsibility of the winner. The winner must sign an affidavit of eligibility and compliance with the rules.</string>
    <string name="rules_12">By accepting the prize, winners also consent to the use of their names, photographs, biographical information, or likeness in future promotions and publicity without compensation.</string>
    <string name="rules_13">All federal, state and local laws and regulations apply. Void where prohibited.</string>
    <string name="rules_14">Prize substitution is prohibited. Winners may upgrade at their own expense.</string>
    <string name="subtitle_additional_rules">Additional Rules</string>
    <string name="rules_a1">Incidentals, purchases, departure taxes and other personal expenses are the sole responsibility of the winner. The trip must be taken within one year or a date mutually agreed upon by Breezes whichever is longer.</string>
    <string name="rules_a2">Prizes are not redeemable for cash. Prizes may not be extended, transferred or substituted.</string>
    <string name="rules_a3">Conditions; As a condition of receiving the grand prize, grand prize winner (GPW) will be required to appear and present valid photo ID proving age and US residency and maybe required to sign other legal documents including tax forms.</string>
    <string name="rules_a4">All winners, by accepting prizes, release Breezes, Event Locations and Event Locations from any and all liability with respect to any prize or any actions whatever for injuries, damage or loss to persons or property which may be sustained in connection with the sweepstakes or receipt or use of prizes.</string>
	<string name="rules_a5">By entering, participants agree to be bound by these official rules. All federal, state and local taxes apply. Event Locations decision is final.</string>
	<string name="label_contact_information">Contact Information</string>
	<string name="label_about_your_honeymoon">About your Honeymoon</string>        
	<string name="label_about_your_honeymoon_subtitle">Which Country would you like to go on your Honeymoon: </string>
	<string name="label_antigua">Antigua</string>
	<string name="label_bahamas">Bahamas</string>
	<string name="label_bermuda">Bermuda</string>
	<string name="label_british">\'BVI\'</string> 
	<string name="label_france">France</string>
	<string name="label_hawaii">Hawaii</string>
	<string name="label_italy">Italy</string>
	<string name="label_jamaica">Jamaica</string>
	<string name="label_sbarts">St. Barts</string>
	<string name="label_slucia">St. Lucia</string>
	<string name="label_smartin">St. Martin</string>
	<string name="enter_button">Enter</string>
	<string name="label_event_information">Event Information</string>
	<string name="label_event_date">Event Date</string>
	<string name="label_event_county">Event County</string> 
	<string name="label_type_of_event_site">Type of Event Site</string>
	<string name="label_type_event_1">Catering Hall</string>
	<string name="label_honeymoon_ok_title">Sucess</string>
	<string name="label_honeymoon_ok">Thank you for entering the\n Honeymoon Sweepstakes</string>
    <string name="error_gpsturnoff">This application requires the use of GPS to locate your position</string>
    <string name="error_gpsturnoffTitle">GPS is not connected</string>
    <string name="btn_cancel">Cancel</string>
    <string name="label_nointernet">Internet not available</string>
	<string name="label_coming_soon">Coming Soon</string>
	<string name="label_email0">Hi,  \n</string>
	<string name="label_email1">I found this app for finding great event sites .  \n</string>
	<string name="label_email2">You can download it for free from Google Market: \n</string>
	<string name="label_email3">https://market.android.com/developer?pub=EventLocations \n</string>
	<string name="label_email4">Event Locations App is also available on the iPhone and iPad. \n</string>
	<!--  string name="label_email4">Its also available on the iPhone and iPad. \n</string>-->
	<string name="label_subject">Event Locations - Free Google App to locate Great NY/NJ Venues</string>
	    <string name="label_shuttle">Shuttle</string>
    <string name="label_standard">Standard</string>
    <string name="label_satellite">Satellite</string>
    <string name="label_hybrid">Hybrid</string>
    <string name="label_category">Back</string>
    <string name="label_yourname">Your Name:</string>
    <string name="label_email">Email:</string>
    <string name="label_youremail">Your Email:</string>
    <string name="label_subject2">Subject:</string>
    
    <string name="label_affairtoremember">A Bridal Affair To Remember</string>
    <string name="label_affairtoremember_web">www.bridalaffair.com</string>
    <string name="label_greatbridalextravangaza">Great Bridal Extravaganza</string>
    <string name="label_greatbridalextravangaza_web">www.a2zeventservices.com</string>
    <string name="label_everythingbridal_bs">Everything Bridal</string>
    <string name="label_everythingbridal_bs_web">www.everythingbridalshows.com</string>
    <string name="label_bosco">Bosco\'s Bridal Show</string>
    <string name="label_bosco_web">www.boscobridal.com</string>
    <string name="label_nypremierbridal">NY\'s Premier Bridal Show</string>
    <string name="label_nypremierbridal_web">www.1888metroexpo.com/bridal_expo/information.asp</string>
    <string name="label_elegantbridaiprod">Elegant Bridal</string>
    <string name="label_elegantbridaiprod_web">www.elegantbridal.com</string>
    <string name="label_planitexpo">PlanIt Expo</string>
    <string name="label_planitexpo_web">http://www.planitexpo.com/shows.html</string>
    
        
    
    
</resources>
	<!-- string name="label_email4">It\'s also available on the iPhone and iPad. \n</string> -->