<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent" android:background="@drawable/background_0"
    android:layout_height="fill_parent">

	<ImageView android:id="@+id/titleBar"
    	android:layout_width="fill_parent"
        android:layout_height="43dp"
    	android:background="@drawable/title_bar"
    />
     
     <TextView 
    	android:text="@string/honeymoon_title"
    	android:textSize="22sp" android:layout_marginLeft="10dip"
    	android:textStyle="bold" android:layout_marginTop="5dip"
    	android:layout_height="wrap_content" 
    	android:layout_width="wrap_content" 
    	android:layout_alignParentTop="true" 
    	android:layout_centerHorizontal="true"/>
    	

     <TextView android:id="@+id/title_1"
        android:layout_below="@+id/titleBar"
    	android:text="@string/honeymoon_title"
    	android:textSize="22sp" android:layout_marginLeft="10dip"
    	android:textStyle="bold" android:layout_marginTop="5dip"
    	android:layout_height="wrap_content" android:gravity="center_horizontal"
    	android:layout_width="fill_parent" android:textColor="@color/black"
    	/>
    	
     <TextView android:id="@+id/title_2" 
     	android:layout_below="@+id/title_1"
    	android:text="@string/win_a_honeymoon_subitile"
    	android:textSize="14sp" android:layout_marginLeft="10dip"
    	android:textStyle="bold" android:layout_marginTop="5dip"
    	android:layout_height="wrap_content" android:gravity="center_horizontal"
    	android:layout_width="fill_parent" android:textColor="@color/black"
     />

	<ImageView android:id="@+id/image1" android:layout_below="@+id/title_2"
    	android:layout_width="730dip" android:gravity="center_horizontal"
        android:layout_height="441dip"
    	android:background="@drawable/superclubswin"
    	android:layout_marginLeft="50dip" android:layout_marginRight="50dip"
    />
    
     <TextView android:id="@+id/title_3" 
     	android:layout_below="@+id/image1"
    	android:text="@string/win_a_honeymoon_subitile2"
    	android:textSize="16sp" android:layout_marginLeft="50dip" android:layout_marginRight="50dip"
    	android:textStyle="bold" android:layout_marginTop="5dip"
    	android:layout_height="wrap_content" 
    	android:layout_width="wrap_content" android:textColor="@color/black"
     />    


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:gravity="center_horizontal"
    android:layout_width="fill_parent" android:layout_below="@+id/title_3"
    android:layout_height="fill_parent">
    
     <Button android:id="@+id/rules_regulation"  
     	android:text="@string/rules_regulations" 
     	android:layout_width="wrap_content" 
     	android:layout_height="wrap_content" 
     	android:textSize="20sp" android:layout_marginLeft="0dip"
     	android:textStyle="bold" 
     	android:textColor="@color/black"
     	android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
    	android:background="@drawable/xml_white"
     	android:layout_marginTop="30dp"  
     	>
     	
     </Button>
     
  <Button android:id="@+id/next"  android:layout_toRightOf="@+id/rules_regulation"
     	android:text="@string/next" 
     	android:layout_width="wrap_content" 
     	android:layout_height="wrap_content" 
     	android:textSize="20sp" android:layout_marginLeft="30dip" android:layout_marginRight="50dip"
     	android:textStyle="bold" 
     	android:textColor="@color/black"
     	android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
    	android:background="@drawable/xml_white"
     	android:layout_marginTop="30dp"  
     	>
     	
     </Button>     
</RelativeLayout>    	

</RelativeLayout>