<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_0">

    	 
	        <LinearLayout
	     	android:id="@+id/header"
			android:layout_width="fill_parent"
			android:layout_marginTop="0dip"
			android:layout_height="wrap_content"  
			android:layout_marginLeft="0dip"
			android:layout_weight="0"
			android:orientation="horizontal"
			android:background="@drawable/blackbar_blue"
			>	    
		
			    <TextView android:id="@+id/titleemail"
			     	android:textSize="25sp" 
			     	android:textStyle="bold"
			     	android:textColor="#FFFFFF"
			    	android:layout_height="wrap_content" 
			    	android:layout_width="fill_parent" 
			    	android:layout_alignParentTop="true" 
			    	android:layout_centerVertical="true"
			    	android:layout_gravity="center_horizontal|center_vertical"
			    	android:gravity="center_horizontal|center_vertical"
			    	android:layout_centerHorizontal="true"/>
		   	</LinearLayout> 

	            
    	
    	
    	<LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dip"
			android:layout_marginLeft="35dip"
			android:orientation="horizontal"
            android:layout_marginTop="5dip">							         
    	    
		    		<TextView android:id="@+id/your_name"
				     	android:textSize="16sp" 
				     	android:textStyle="bold"
				     	android:textColor="#000000"
				     	android:layout_marginTop="10dip"
				    	android:layout_height="wrap_content" 
				    	android:layout_width="100dip"
				    	android:text="@string/label_yourname" 
				    	/>	
				    	    	    					         

					 <EditText android:id="@+id/et_name"
								android:layout_width="400dip" 
								android:layout_marginTop="10dip"
								android:layout_marginRight="0dip"
								android:layout_marginLeft="15dip"
								android:layout_height="35dip"
								android:textSize="16sp" 
								android:singleLine="True"
								android:textColor="#000000"
								android:hint="@string/hint_username"
								android:paddingLeft="6dip"
								android:background="@drawable/xml_white"
							/> 		
							

			</LinearLayout> 	
			
	    	<LinearLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="0dip"
				android:layout_marginLeft="35dip"
				android:orientation="horizontal"
	            android:layout_marginTop="5px">
					 
		    		<TextView 
				     	android:textSize="16sp" 
				     	android:textStyle="bold"
				     	android:textColor="#000000"
				     	android:layout_marginTop="10dip"
				    	android:layout_height="wrap_content" 
				    	android:layout_width="100dip"
				    	android:text="@string/label_youremail" 
				    	/>		    	    	    	    			
							
					   	<EditText android:id="@+id/et_email"
					   	    	android:inputType="textEmailAddress"
								android:layout_width="400dip" 
								android:layout_marginTop="10dip"
								android:layout_marginRight="0dip"
								android:layout_marginLeft="15dip"
								android:layout_height="35dip"
								android:textSize="16sp" 
								android:singleLine="True"
								android:textColor="#000000"
								android:hint="@string/hint_email"
								android:paddingLeft="6dip"
								android:background="@drawable/xml_white"
							/> 
							
					   
			</LinearLayout>
			
	    	    
	    	<LinearLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="0dip"
				android:layout_marginLeft="35dip"
				android:orientation="horizontal"
	            android:layout_marginTop="5px">	
	            
	    	    	 	<TextView 
				     	android:textSize="16sp" 
				     	android:textStyle="bold"
				     	android:textColor="#000000"
				     	android:layout_marginTop="10dip"
				    	android:layout_height="wrap_content" 
				    	android:layout_width="100dip"
				    	android:text="@string/label_subject2" 
				    	/>		
			 							
							
					   	<EditText android:id="@+id/et_subject"
								android:layout_width="400dip" 
								android:layout_marginTop="10dip"
								android:layout_marginRight="10dip"
								android:layout_marginLeft="15dip"
								android:layout_height="35dip"
								android:textSize="16sp" 
								android:singleLine="True"
								android:textColor="#000000"
								android:hint="@string/hint_subject"
								android:paddingLeft="6dip"
								android:background="@drawable/xml_white"
							/> 
							
					<!--  LinearLayout 
					            android:layout_width="fill_parent"
					            android:layout_height="wrap_content"
					            android:layout_marginRight="20dip"
								android:layout_marginLeft="15dip"
								android:orientation="horizontal"
								android:layout_gravity="right"
								android:gravity="right"
					            android:layout_marginTop="15dip">-->		            
				            
									<Button android:id="@+id/sendEmail" 
									     	android:text="@string/send_button" 
									     	android:layout_width="wrap_content" 
									     	android:layout_height="wrap_content" 
									     	android:textSize="20sp" 
									     	android:textStyle="bold" 
									     	android:textColor="@color/black"
									     	android:paddingLeft="22dp"
									        android:paddingRight="22dp"
									        android:paddingTop="2dp"        	 	
									        android:paddingBottom="2dp"
									    	android:background="@drawable/xml_white"
									     	android:layout_marginTop="15dp"
									    	/>
									
									
									<Button android:id="@+id/cancelEmail" 
									     	android:text="@string/btn_cancel" 
									     	android:layout_width="wrap_content" 
									     	android:layout_height="wrap_content" 
									     	android:textSize="20sp" android:layout_marginLeft="10dip"
									     	android:textStyle="bold" 
									     	android:textColor="@color/black"
									     	android:paddingLeft="22dp"
									        android:paddingRight="22dp"
									        android:paddingTop="2dp"        	 	
									        android:paddingBottom="2dp"
									    	android:background="@drawable/xml_white"
									     	android:layout_marginTop="15dp"
									    	/>    	    
				    	    
				    	<!--  /LinearLayout>--> 	    					   	
					   	
			</LinearLayout>
			
	    	<LinearLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="10dip"
				android:layout_marginLeft="20dip"
				android:orientation="horizontal"
	            android:layout_marginTop="20dip">		    	    
	    	    
	    	    							
					   	<EditText android:id="@+id/et_message"
								android:layout_width="fill_parent" 
								android:layout_marginTop="10dip"
								android:layout_marginRight="15dip"
								android:layout_marginLeft="15dip"
								android:layout_height="wrap_content"
								android:textSize="16sp"
								android:text="Message" 
								android:height="300dip"
								android:gravity="top"
								android:layout_gravity="top"								
								android:layout_below="@id/et_subject" 
								android:textColor="#000000"
								android:paddingLeft="6dip"
								android:paddingTop="2dip"
							/> 																								

		</LinearLayout>
    	

	<LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dip"
			android:layout_marginLeft="35dip"
			android:orientation="horizontal"
			android:layout_gravity="right"
			android:gravity="right"
            android:layout_marginTop="10dip">		            
            
					<Button android:id="@+id/sendEmail2" 
					     	android:text="@string/send_button" 
					     	android:layout_width="wrap_content" 
					     	android:layout_height="wrap_content" 
					     	android:textSize="20sp" 
					     	android:textStyle="bold" 
					     	android:textColor="@color/black"
					     	android:paddingLeft="45dp"
					        android:paddingRight="45dp"
					        android:paddingTop="2dp"        	 	
					        android:gravity="right"
					        android:layout_gravity="right"
					        android:paddingBottom="2dp"
					    	android:background="@drawable/xml_white"
					    	android:layout_alignParentRight="true"
					     	android:layout_marginTop="10dp"
					    	/>
					
					
					<Button android:id="@+id/cancelEmail2" 
					     	android:text="@string/btn_cancel" 
					     	android:layout_width="wrap_content" 
					     	android:layout_height="wrap_content" 
					     	android:textSize="20sp" android:layout_marginLeft="10dip"
					     	android:textStyle="bold" 
					     	android:textColor="@color/black"
					     	android:paddingLeft="45dp"
					        android:paddingRight="45dp"
					        android:paddingTop="2dp"        	 	
					        android:gravity="right"
					        android:layout_gravity="right"
					        android:paddingBottom="2dp"
					    	android:background="@drawable/xml_white"
					    	android:layout_alignParentRight="true"
					     	android:layout_marginTop="10dp"
					    	/>    	    
    	    
    	</LinearLayout> 	    
        
            
</LinearLayout>
