<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<!-- android:background="@drawable/fondo1" -->    
     <RelativeLayout android:id="@+id/box_TitleLL"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="0dip"  
       android:background="@drawable/bottombar"
       android:orientation="horizontal">   
		 
		 
				<ImageView 
					android:id="@+id/back" 
					android:layout_marginTop="7dip"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:layout_marginLeft="9dip" 
					android:src="@drawable/navback"
				/>				
				
			<TextView  
			    android:layout_width="wrap_content"  
			    android:layout_height="wrap_content" 
			    android:text="@string/label_category"
				android:textSize="10sp" 
				android:layout_marginLeft="27dip"
				android:layout_marginRight="0dip"
				android:layout_marginTop="13dip"
				android:textColor="#FFFFFF"
				android:shadowDx="10"
				android:textStyle="bold"
			    />							 
		 
					<ImageView 
						android:id="@+id/img_standard"
						android:layout_marginTop="6dip"
						android:layout_width="69dip"
						android:layout_height="30dip"
						android:layout_marginLeft="90dip" 
						android:src="@drawable/button_left_off"
						/>
					
					<TextView  
					   		android:id="@+id/tv_standard" 
						    android:layout_width="wrap_content" 
						    android:layout_height="wrap_content" 
						    android:text="@string/label_standard"
							android:textSize="10sp" 
							android:textStyle="bold"
							android:layout_marginLeft="103dip"
							android:layout_marginTop="14dip"
							android:textColor="#FFFFFF"
						    />
					
					<ImageView 
						android:id="@+id/img_satellite"
						android:layout_marginTop="6dip"
						android:layout_toRightOf="@+id/tv_standard"
						android:layout_width="69dip"
						android:layout_height="30dip"
						android:layout_marginLeft="14dip" 
						android:src="@drawable/bt_middle_off"
						/>		
					
					<TextView  android:id="@+id/tv_satellite"
						    android:layout_width="wrap_content" 
						    android:layout_height="wrap_content" 
						    android:text="@string/label_satellite"
							android:textSize="10sp" 
							android:textStyle="bold"
							android:layout_marginLeft="176dip"
							android:layout_marginTop="14dip"
							android:textColor="#FFFFFF"
						 />

					<ImageView 
							android:id="@+id/img_hybrid" 
							android:layout_marginTop="6dip"
							android:layout_toRightOf="@+id/img_satellite"
							android:layout_width="69dip"
							android:layout_height="30dip"
							android:layout_marginLeft="1dip" 
							android:src="@drawable/button_right_off"
						/>	    	 
					
					<TextView  android:id="@+id/tv_hybrid"
						    android:layout_width="wrap_content" 
						    android:layout_height="wrap_content" 
						    android:text="@string/label_hybrid"
							android:textSize="10sp" 
							android:textStyle="bold"
							android:layout_marginLeft="248dip"
							android:layout_marginTop="14dip"
							android:textColor="#FFFFFF" 
						 />
	    	 
	    	 -->
	</RelativeLayout>
				<!--  345-->
	
	
	 <RelativeLayout android:background="#80FFFFFF"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="0dip"
	   android:layout_marginLeft="0dip"
	   android:layout_marginRight="0dip"	       
       android:orientation="vertical">  	
					<LinearLayout android:id="@+id/record_data"
					    			android:orientation="vertical"
					    			android:layout_width="fill_parent"
					    			android:layout_height="fill_parent"
					    			android:layout_marginTop="0dip"
					    			android:layout_marginBottom="0dip"
					    			android:layout_marginLeft="0dip"
					    			android:layout_marginRight="0dip"
					    			> 	    			
								
						    
				</LinearLayout>

				<RelativeLayout android:background="#80000000"
				       android:layout_width="fill_parent"
				       android:layout_height="wrap_content"
				       android:layout_marginTop="330dip"
				       android:orientation="vertical">				
								
				 </RelativeLayout> 				
		</RelativeLayout> 			
	
	
</LinearLayout>


